--- a/apps/blueprint-forms/package.json
+++ b/apps/blueprint-forms/package.json
@@ -21,7 +21,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@tailwindcss/postcss": "^4.1.14",
     "axios": "^1.6.2",
+    "easymde": "^2.20.0",
     "react-hook-form": "^7.49.2",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.4"
   }
 }
