--- a/apps/blueprint-forms/package.json
+++ b/apps/blueprint-forms/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@tailwindcss/postcss": "^4.1.14",
+    "@tiptap/extension-link": "^3.6.6",
+    "@tiptap/extension-text-align": "^3.6.6",
+    "@tiptap/extension-underline": "^3.6.6",
+    "@tiptap/react": "^3.6.6",
+    "@tiptap/starter-kit": "^3.6.6",
     "axios": "^1.6.2",
     "easymde": "^2.20.0",
     "react-hook-form": "^7.49.2",
