--- a/apps/blueprint-forms/package.json
+++ b/apps/blueprint-forms/package.json
@@ -27,6 +27,7 @@
     "@tiptap/starter-kit": "^3.6.6",
     "axios": "^1.6.2",
     "easymde": "^2.20.0",
+    "react-datepicker": "^8.7.0",
     "react-hook-form": "^7.49.2",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.4"
